Added save and load feature to adventure game.

--- a/FreeTime/Banner.html
+++ b/FreeTime/Banner.html
@@ -14,8 +14,8 @@
             </ul>
         </li>
         <li><a href="AdventureGame.aspx">Adventure Game </a></li>
-        <li><a href="NewsUpdate.aspx">Coming soon</a></li>
-        <li role="presentation"><a href="NewsUpdate.aspx">Coming soon </a></li>
+        <li><a href="Login.aspx">Log in</a></li>
+        <li role="presentation"><a href="Signup.aspx">Sign up </a></li>
         <!--</ul>-->
         <div class="pull-right">
             <!--<a href="#" id="en">English</a>&emsp;-->
