Fixed mobile display bugs

--- a/FreeTime/Banner.html
+++ b/FreeTime/Banner.html
@@ -72,6 +72,14 @@
 
                 <a href="AdventureGame.aspx">Adventure Game</a>
             </li>
+            <li role="presentation" class="active">
+
+                <a href="Login.aspx">Log in</a>
+            </li>
+            <li role="presentation" class="active">
+
+                <a href="Signup.aspx">Sign up</a>
+            </li>
 
 
         </ul>
