Added sites used page.

--- a/FreeTime/Banner.html
+++ b/FreeTime/Banner.html
@@ -10,7 +10,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>Demos</span><span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="SortingPage.aspx">Sorting Page</a></li>
-                <li><a href="BestSellingBooks.aspx">Best Selling Books</a></li>
+                <li><a href="SitesUsed.aspx">Sites used</a></li>
             </ul>
         </li>
         <li><a href="AdventureGame.aspx">Adventure Game </a></li>
@@ -66,7 +66,7 @@
             </li>
             <li role="presentation" class="active">
 
-                <a href="BestSellingBooks.aspx">Best selling books</a>
+                <a href="SitesUsed.aspx">Sites used</a>
             </li>
             <li role="presentation" class="active">
 
