Stable release before redoing news update.

--- a/FreeTime/Banner2.html
+++ b/FreeTime/Banner2.html
@@ -3,9 +3,8 @@
     <!-- http://clipart-library.com/free/red-arrow-png-transparent.html -->
     <!--<nav class="collapse navbar-collapse navbar-inverse">-->
     <img class="logo" src="images/PurpleBackground.png" alt="purple" />
-    <ul class="nav navbar-nav " id="navBar">
-        <!--<li><a href="NewsUpdate.aspx" data-localize="nav.home">News Update</a></li>-->
-        <li><a href="AdventureGame.aspx" data-localize="nav.home">Coming Soon</a></li>
+    <ul class="nav navbar-nav" id="navBar">
+        <li><a href="NewsUpdate.aspx" data-localize="nav.home">News Update</a></li>
         <li><a href="WeatherInfo.aspx" data-localize="nav.order">Weather Info </a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>Demos</span><span class="caret"></span></a>
@@ -25,9 +24,9 @@
 
             <div id="google_translate_element"></div>
             <script type="text/javascript">
-                function googleTranslateElementInit() {
-                    new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
-                }
+                                                             function googleTranslateElementInit() {
+                                                                 new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+                                                             }
             </script>
             <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
@@ -39,9 +38,9 @@
 
 
 <!--start of added code-->
-<div id="drawerMenu" class="drawer dw-xs-8 fold float-right ml-auto drawer-right">
-    <div class="drawer-controls visible-xs-block ml-auto align-self-end ">
-        <a href="#drawerMenu" data-toggle="drawer" class="btn btn-primary btn-lg float-right ml-auto " style="font-size: 50px; padding: 0px 5px 0px 5px; ">&equiv;</a>
+<div id="drawerMenu" class="drawer dw-xs-8 fold">
+    <div class="drawer-controls visible-xs-block">
+        <a href="#drawerMenu" data-toggle="drawer" class="btn btn-primary btn-lg" style="font-size:50px; padding:0px 5px 0px 5px">&equiv;</a>
 
     </div>
 
@@ -55,8 +54,7 @@
         <ul class="drawer-nav">
 
             <li role="presentation" class="active">
-                <!--<a href="NewsUpdate.aspx">News Update</a>-->
-                <a href="AdventureGame.aspx">Coming soon</a>
+                <a href="NewsUpdate.aspx">News Update</a>
 
             </li>
             <li role="presentation" class="active">
@@ -94,9 +92,5 @@
         <small>&copy; ATS</small>
     </div>
     <!--</div> this might be the added one-->
-    <br>
-    <br>
-    <br>
-
 </div><!--closed draw menu-->
 <!-- end of added code-->
