Fixed news update webpage by switching to New York Time API.

--- a/FreeTime/Banner.html
+++ b/FreeTime/Banner.html
@@ -4,8 +4,8 @@
     <!--<nav class="collapse navbar-collapse navbar-inverse">-->
     <img class="logo" src="images/PurpleBackground.png" alt="purple" />
     <ul class="nav navbar-nav " id="navBar">
-        <!--<li><a href="NewsUpdate.aspx" data-localize="nav.home">News Update</a></li>-->
-        <li><a href="AdventureGame.aspx" data-localize="nav.home">Coming Soon</a></li>
+        <li><a href="NewsUpdate.aspx" data-localize="nav.home">News Update</a></li>
+        <!--<li><a href="AdventureGame.aspx" data-localize="nav.home">Coming Soon</a></li>-->
         <li><a href="WeatherInfo.aspx" data-localize="nav.order">Weather Info </a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>Demos</span><span class="caret"></span></a>
@@ -55,8 +55,8 @@
         <ul class="drawer-nav">
 
             <li role="presentation" class="active">
-                <!--<a href="NewsUpdate.aspx">News Update</a>-->
-                <a href="AdventureGame.aspx">Coming soon</a>
+                <a href="NewsUpdate.aspx">News Update</a>
+                <!--<a href="AdventureGame.aspx">Coming soon</a>-->
 
             </li>
             <li role="presentation" class="active">
